package com.morris.pattern.facade;

public class Cpu {

    public void start() {
        System.out.println("CPU start");
    }

    public void shutdown() {
        System.out.println("CPU shutdown");
    }

}
