package com.morris.pattern.facade;

public class Disk {

    public void start() {
        System.out.println("Disk start");
    }

    public void shutdown() {
        System.out.println("Disk shutdown");
    }

}
