package com.morris.pattern.facade;

public class Memory {

    public void start() {
        System.out.println("Memmory start");
    }

    public void shutdown() {
        System.out.println("Memory shutdown");
    }

}
