@startuml

title 计算机门面模式类图

class Computer {
    + void start()
    + void shutdown()
}

note right of Computer
    public void start() {
        cpu.start();
        memory.start();
        disk.start();
    }

    public void shutdown() {
        cpu.shutdown();
        memory.shutdown();
        disk.shutdown();
    }
end note

class Cpu {
    + void start()
    + void shutdown()
}
class Memory {
    + void start()
    + void shutdown()
}

class Disk {
    + void start()
    + void shutdown()
}

Computer --> Cpu
Computer --> Memory
Computer --> Disk

class Client
Client --> Computer


@enduml